# POI-Schiltern

./: .gitignore  .jshintrc  LICENSE.md  build.js  build.mjs  config.yaml  getOsm.py  index.ejs  index.html  map.html  mapOverpass.html  package-lock.json  package.json  publish.sh  punkte.json  settings.py  webpack.config.js
fetch/: additionalPois.json  config.yaml  getOsm.py  pyproject.toml  requirements.txt
public/: index.html
src/: index.js  index.ts  popup.js  popup.ts  utils.ts
