[tool.poetry]
name = "fetch"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
PyYAML = "^6.0"
shapely = "^2.0.0"
overpass = "^0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
